DMP-2288 introduced integration test for InboundToUnstructuredProcessor